# almaGenAi1

./: .env  .gitignore  README.md  langchain_start.ipynb  main.py  pyproject.toml  rag_finance.ipynb  rag_fundamental_langchain.ipynb  requirements.txt
